<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.robson.icounts.controllers.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/card_padding_bottom"
                    android:text="@string/label_current_balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                   <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/label_credit" />

                    <TextView
                        android:id="@+id/textViewCredit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/label_debt" />

                    <TextView
                        android:id="@+id/textViewDebit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/card_padding_bottom"
                    android:text="@string/label_income_expenditure"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="@dimen/card_relative_progress_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true">

                        <com.robson.icounts.libraries.AnimateHorizontalProgressBar
                            android:id="@+id/progressRents"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_progress_height"
                            android:layout_marginTop="@dimen/card_progress_margin_top"
                            android:progressDrawable="@drawable/progress_rents_color" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="@dimen/card_relative_text_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_rents"
                            android:textColor="@color/custom_progress_green_progress" />

                        <TextView
                            android:id="@+id/textViewRents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/custom_progress_green_progress" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="@dimen/card_relative_progress_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true">

                        <com.robson.icounts.libraries.AnimateHorizontalProgressBar
                            android:id="@+id/progressSpending"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_progress_height"
                            android:layout_marginTop="@dimen/card_progress_margin_top"
                            android:progressDrawable="@drawable/progress_spending_color" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="@dimen/card_relative_text_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_spending"
                            android:textColor="@color/custom_progress_red_progress" />

                        <TextView
                            android:id="@+id/textViewSpending"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/custom_progress_red_progress" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_relative_graphic_height"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/card_padding_bottom"
                    android:text="@string/label_month_spending"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/card_padding_bottom"
                    android:text="@string/label_recurrence"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.robson.icounts.libraries.AnimateHorizontalProgressBar
                    android:id="@+id/progressRecurrence"
                    android:layout_width="@dimen/card_progress_width"
                    android:layout_height="@dimen/card_progress_height"
                    android:layout_marginTop="@dimen/card_progress_margin_top"
                    android:progressDrawable="@drawable/progress_recurrence_color" />

                <TextView
                    android:id="@+id/textViewRecurrence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>